# BigMartSalesPrediction

backend/: .gitignore  README.md  main.py  pyproject.toml
backend/model/: README.md  __init__.py  core.py  data_logic.py  model_service.py  training_logic.py
frontend/: .gitignore  components.json  index.html  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/ui/: accordion.jsx  alert.jsx  calendar.jsx  card.jsx  checkbox.jsx  dialog.jsx  dropdown-menu.jsx  hover-card.jsx  input-group.jsx  input.jsx  label.jsx  scroll-area.jsx  select.jsx  separator.jsx  skeleton.jsx  table.jsx  tabs.jsx  textarea.jsx  tooltip.jsx
frontend/src/lib/: api.js
